--- a/semanas/semana1.html
+++ b/semanas/semana1.html
@@ -22,16 +22,16 @@
                 <div class="activity-box">
                     <p class="prompt">Sua missão: Complete as 10 frases abaixo com a palavra que falta!</p>
                     <ul class="transform-activity">
-                        <li>I <input type="text" id="s1d1q1" data-answer="eat"> rice and beans.</li>
-                        <li>You <input type="text" id="s1d1q2" data-answer="drink"> orange juice.</li>
-                        <li>I <input type="text" id="s1d1q3" data-answer="love"> chocolate.</li>
-                        <li>You <input type="text" id="s1d1q4" data-answer="like"> videogames.</li>
-                        <li>I <input type="text" id="s1d1q5" data-answer="hate"> spiders.</li>
-                        <li>You <input type="text" id="s1d1q6" data-answer="eat"> bread for breakfast.</li>
-                        <li>I <input type="text" id="s1d1q7" data-answer="want"> a new computer.</li>
-                        <li>You <input type="text" id="s1d1q8" data-answer="have"> a dog.</li>
-                        <li>I <input type="text" id="s1d1q9" data-answer="speak"> Portuguese.</li>
-                        <li>You <input type="text" id="s1d1q10" data-answer="live"> in Brazil.</li>
+                        <li>I <input type="text" id="s1d1q1" data-answer="eat"> rice and beans. (comer)</li>
+                        <li>You <input type="text" id="s1d1q2" data-answer="drink"> orange juice. (beber)</li>
+                        <li>I <input type="text" id="s1d1q3" data-answer="love"> chocolate. (amar)</li>
+                        <li>You <input type="text" id="s1d1q4" data-answer="like"> videogames. (gostar)</li>
+                        <li>I <input type="text" id="s1d1q5" data-answer="hate"> spiders. (odiar)</li>
+                        <li>You <input type="text" id="s1d1q6" data-answer="eat"> bread for breakfast. (comer)</li>
+                        <li>I <input type="text" id="s1d1q7" data-answer="want"> a new computer. (querer)</li>
+                        <li>You <input type="text" id="s1d1q8" data-answer="have"> a dog. (ter)</li>
+                        <li>I <input type="text" id="s1d1q9" data-answer="speak"> Portuguese. (falar)</li>
+                        <li>You <input type="text" id="s1d1q10" data-answer="live"> in Brazil. (morar)</li>
                     </ul>
                     <button id="verify-s1d1" class="check-btn">Verificar Respostas</button>
                 </div>
@@ -96,7 +96,9 @@
                         <li>I like my teacher, but I don't like <input type="text" id="s1d5q9" data-answer="math">.</li>
                         <li>You have a red car, but you want a <input type="text" id="s1d5q10" data-answer="blue"> car.</li>
                     </ul>
+                    <!--
                     <button id="verify-s1d5" class="check-btn">Verificar Respostas</button>
+                    -->
                 </div>
             </section>
             
