--- a/semanas/semana2.html
+++ b/semanas/semana2.html
@@ -19,21 +19,22 @@
         <main>
             <!-- TREINO 1: PERGUNTAS COM "DO YOU...?" - 10 EXERCÍCIOS -->
             <section class="mission-day">
-                <h2>Treino 1: O Poder da Pergunta com "<span class="en-word">Do you...?</span>"</h2>
+                <h2>Treino 1: Traduza as Perguntas para o Inglês</h2>
                 <div class="activity-box">
-                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Para perguntar algo a alguém em inglês, usamos a palavra mágica <span class="en-word">Do</span> no início! A fórmula é: <br><strong><span class="en-word">Do you</span> + AÇÃO + ...?</strong></p>
-                    <p class="prompt">Sua missão: Complete as 10 perguntas abaixo com o verbo que falta!</p>
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">
+                        Sua missão: Traduza as perguntas abaixo para o inglês usando "Do you...?".
+                    </p>
                     <ul class="transform-activity">
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q1" data-answer="speak" class="input-sm"> <span>Portuguese?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q2" data-answer="live" class="input-sm"> <span>in Brazil?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q3" data-answer="like" class="input-sm"> <span>hamburgers?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q4" data-answer="have" class="input-sm"> <span>a videogame?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q5" data-answer="want" class="input-sm"> <span>a new computer?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q6" data-answer="eat" class="input-sm"> <span>pizza for dinner?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q7" data-answer="drink" class="input-sm"> <span>milk for breakfast?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q8" data-answer="love" class="input-sm"> <span>your family?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q9" data-answer="hate" class="input-sm"> <span>vegetables?</span></li>
-                        <li class="inline-item"><span>Do you</span> <input type="text" id="s2d1q10" data-answer="study" class="input-sm"> <span>math at school?</span></li>
+                        <li class="inline-item"><span>Você fala português?</span> <input type="text" id="s2d1q1" data-answer="do you speak portuguese?" class="input-full"></li>
+                        <li class="inline-item"><span>Você mora no Brasil?</span> <input type="text" id="s2d1q2" data-answer="do you live in brazil?" class="input-full"></li>
+                        <li class="inline-item"><span>Você gosta de queijo?</span> <input type="text" id="s2d1q3" data-answer="do you like cheese?" class="input-full"></li>
+                        <li class="inline-item"><span>Você tem um console de videogame?</span> <input type="text" id="s2d1q4" data-answer="do you have a videogame console?" class="input-full"></li>
+                        <li class="inline-item"><span>Você quer um computador novo?</span> <input type="text" id="s2d1q5" data-answer="do you want a new computer?" class="input-full"></li>
+                        <li class="inline-item"><span>Você come pizza no jantar?</span> <input type="text" id="s2d1q6" data-answer="do you eat pizza for dinner?" class="input-full"></li>
+                        <li class="inline-item"><span>Você bebe leite no café da manhã?</span> <input type="text" id="s2d1q7" data-answer="do you drink milk for breakfast?" class="input-full"></li>
+                        <li class="inline-item"><span>Você ama sua família?</span> <input type="text" id="s2d1q8" data-answer="do you love your family?" class="input-full"></li>
+                        <li class="inline-item"><span>Você odeia vegetais?</span> <input type="text" id="s2d1q9" data-answer="do you hate vegetables?" class="input-full"></li>
+                        <li class="inline-item"><span>Você estuda matemática na escola?</span> <input type="text" id="s2d1q10" data-answer="do you study math at school?" class="input-full"></li>
                     </ul>
                     <button id="verify-s2d1" class="check-btn">Verificar</button>
                 </div>
@@ -43,7 +44,21 @@
             <section class="mission-day">
                 <h2>Treino 2: Descobrindo o Mundo com "<span class="en-word">What</span> & <span class="en-word">Where</span>"</h2>
                 <div class="activity-box">
-                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Para descobrir "O QUÊ" ou "ONDE", usamos outras palavras mágicas antes do <span class="en-word">Do you</span>. A fórmula fica: <br><strong><span class="en-word">What/Where</span> + <span class="en-word">do you</span> + AÇÃO + ...?</strong></p>
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">
+                        <strong>Aprenda:</strong>
+                        <button class="audio-btn" data-audio-src="../assets/audio/semana2_what_where.mp3" style="margin-left: 0.5rem;">🔊</button><br>
+                        <span class="en-word">What</span> significa <strong>"O quê"</strong> em inglês. Usamos <span class="en-word">what</span> para perguntar sobre coisas, ações ou informações. <br>
+                        <span class="en-word">Where</span> significa <strong>"Onde"</strong> em inglês. Usamos <span class="en-word">where</span> para perguntar sobre lugares ou localização.<br><br>
+                        <strong>Como usar:</strong><br>
+                        Para fazer perguntas, colocamos <span class="en-word">what</span> ou <span class="en-word">where</span> no início da frase, seguido de <span class="en-word">do you</span> e o verbo. <br>
+                        <span style="color:#2ecc71;">Exemplo com <span class="en-word">what</span>:</span> <br>
+                        <span style="background:#f0f4f8; padding:2px 8px; border-radius:6px;">What do you eat for lunch?</span> <br>
+                        (O que você come no almoço?)<br>
+                        <span style="color:#2ecc71;">Exemplo com <span class="en-word">where</span>:</span> <br>
+                        <span style="background:#f0f4f8; padding:2px 8px; border-radius:6px;">Where do you live?</span> <br>
+                        (Onde você mora?)<br><br>
+                        <strong>Dica:</strong> Sempre use <span class="en-word">what</span> para perguntar sobre coisas e <span class="en-word">where</span> para perguntar sobre lugares!
+                    </p>
                     <p class="prompt">Sua missão: Transforme as ideias em 10 perguntas de jornalista!</p>
                     <ul class="transform-activity">
                         <li><p class="prompt">1. Pergunte ONDE a pessoa mora.</p>
@@ -52,20 +67,20 @@
                             <input type="text" id="s2d2q2" data-answer="what do you study?" class="input-full"><div class="feedback-message" id="s2d2-feedback2"></div></li>
                         <li><p class="prompt">3. Pergunte O QUE a pessoa come no almoço.</p>
                             <input type="text" id="s2d2q3" data-answer="what do you eat for lunch?" class="input-full"><div class="feedback-message" id="s2d2-feedback3"></div></li>
-                        <li><p class="prompt">4. Pergunte O QUE a pessoa quer de presente.</p>
-                            <input type="text" id="s2d2q4" data-answer="what do you want for a present?" class="input-full"><div class="feedback-message" id="s2d2-feedback4"></div></li>
+                        <li><p class="prompt">4. Pergunte O QUE a pessoa gosta de ler.</p>
+                            <input type="text" id="s2d2q4" data-answer="what do you like to read?" class="input-full"><div class="feedback-message" id="s2d2-feedback4"></div></li>
                         <li><p class="prompt">5. Pergunte ONDE a pessoa estuda.</p>
                             <input type="text" id="s2d2q5" data-answer="where do you study?" class="input-full"><div class="feedback-message" id="s2d2-feedback5"></div></li>
                         <li><p class="prompt">6. Pergunte O QUE a pessoa bebe no café da manhã.</p>
                             <input type="text" id="s2d2q6" data-answer="what do you drink for breakfast?" class="input-full"><div class="feedback-message" id="s2d2-feedback6"></div></li>
-                        <li><p class="prompt">7. Pergunte O QUE a pessoa tem na mochila.</p>
+                        <li><p class="prompt">7. Pergunte O QUE a pessoa tem na mochila. (in your = na sua)</p>
                             <input type="text" id="s2d2q7" data-answer="what do you have in your backpack?" class="input-full"><div class="feedback-message" id="s2d2-feedback7"></div></li>
-                        <li><p class="prompt">8. Pergunte ONDE a pessoa joga videogame.</p>
-                            <input type="text" id="s2d2q8" data-answer="where do you play videogame?" class="input-full"><div class="feedback-message" id="s2d2-feedback8"></div></li>
+                        <li><p class="prompt">8. Pergunte ONDE a pessoa joga fala Inglês.</p>
+                            <input type="text" id="s2d2q8" data-answer="where do you speak english?" class="input-full"><div class="feedback-message" id="s2d2-feedback8"></div></li>
                         <li><p class="prompt">9. Pergunte O QUE a pessoa ama.</p>
                             <input type="text" id="s2d2q9" data-answer="what do you love?" class="input-full"><div class="feedback-message" id="s2d2-feedback9"></div></li>
-                        <li><p class="prompt">10. Pergunte ONDE a pessoa quer viajar.</p>
-                            <input type="text" id="s2d2q10" data-answer="where do you want to travel?" class="input-full"><div class="feedback-message" id="s2d2-feedback10"></div></li>
+                        <li><p class="prompt">10. Pergunte ONDE a pessoa quer estudar.</p>
+                            <input type="text" id="s2d2q10" data-answer="where do you want to study?" class="input-full"><div class="feedback-message" id="s2d2-feedback10"></div></li>
                     </ul>
                     <button id="verify-s2d2" class="check-btn">Verificar</button>
                 </div>
