--- a/semanas/semana3.html
+++ b/semanas/semana3.html
@@ -44,18 +44,35 @@
             <section class="mission-day">
                 <h2>Treino 2: Quebra-cabeça de Frases</h2>
                 <div class="activity-box">
-                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Use os "ingredientes" para montar a frase completa na ordem certa. Lembre-se: qualidade ANTES da coisa!</p>
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">
+                        Monte a frase em inglês usando as . Dica: adjetivos (como cores) vêm antes do objeto!
+                    </p>
                     <ul class="transform-activity">
-                        <li><p class="prompt">1. Ingredientes: I / want / a / skateboard / (red)</p>
-                             <input type="text" id="s3d2q1" data-answer="i want a red skateboard" class="input-full"><div class="feedback-message" id="s3d2-feedback1"></div></li>
-                        <li><p class="prompt">2. Ingredientes: You / have / a / backpack / (yellow)</p>
-                            <input type="text" id="s3d2q2" data-answer="you have a yellow backpack" class="input-full"><div class="feedback-message" id="s3d2-feedback2"></div></li>
-                        <li><p class="prompt">3. Ingredientes: They / don't have / a / computer / (old)</p>
-                            <input type="text" id="s3d2q3" data-answer="they don't have an old computer" class="input-full"><div class="feedback-message" id="s3d2-feedback3"></div></li>
-                        <li><p class="prompt">4. Ingredientes: We / don't want / a / video game / (new)</p>
-                            <input type="text" id="s3d2q4" data-answer="we don't want a new video game" class="input-full"><div class="feedback-message" id="s3d2-feedback4"></div></li>
-                        <li><p class="prompt">5. Ingredientes: I / have / many / friends / (new)</p>
-                            <input type="text" id="s3d2q5" data-answer="i have many new friends" class="input-full"><div class="feedback-message" id="s3d2-feedback5"></div></li>
+                        <li>
+                            <p class="prompt">1. skateboard / I / a / want / red</p>
+                            <input type="text" id="s3d2q1" data-answer="i want a red skateboard" class="input-full">
+                            <div class="feedback-message" id="s3d2-feedback1"></div>
+                        </li>
+                        <li>
+                            <p class="prompt">2. backpack / yellow / have / a / you</p>
+                            <input type="text" id="s3d2q2" data-answer="you have a yellow backpack" class="input-full">
+                            <div class="feedback-message" id="s3d2-feedback2"></div>
+                        </li>
+                        <li>
+                            <p class="prompt">3. computer / old / don't / have / an / they</p>
+                            <input type="text" id="s3d2q3" data-answer="they don't have an old computer" class="input-full">
+                            <div class="feedback-message" id="s3d2-feedback3"></div>
+                        </li>
+                        <li>
+                            <p class="prompt">4. don't / we / a / want / new / video game console</p>
+                            <input type="text" id="s3d2q4" data-answer="we don't want a new video game console" class="input-full">
+                            <div class="feedback-message" id="s3d2-feedback4"></div>
+                        </li>
+                        <li>
+                            <p class="prompt">5. have / friends / many / i</p>
+                            <input type="text" id="s3d2q5" data-answer="i have many friends" class="input-full">
+                            <div class="feedback-message" id="s3d2-feedback5"></div>
+                        </li>
                     </ul>
                      <button id="verify-s3d2" class="check-btn">Verificar</button>
                 </div>
@@ -96,8 +113,8 @@
                             <input type="text" id="s3d4q3" data-answer="we like this book" class="input-full"><div class="feedback-message" id="s3d4-feedback3"></div></li>
                         <li><p class="prompt">4. (Você vê uma casa bonita do outro lado da rua) Eu quero...</p>
                             <input type="text" id="s3d4q4" data-answer="i want that house" class="input-full"><div class="feedback-message" id="s3d4-feedback4"></div></li>
-                        <li><p class="prompt">5. (A caneta está na sua mesa, perto de você) Eu gosto...</p>
-                            <input type="text" id="s3d4q5" data-answer="i like this pen" class="input-full"><div class="feedback-message" id="s3d4-feedback5"></div></li>
+                        <li><p class="prompt">5. (O skateboard está na sala, perto de você) Eu gosto...</p>
+                            <input type="text" id="s3d4q5" data-answer="i like this skateboard" class="input-full"><div class="feedback-message" id="s3d4-feedback5"></div></li>
                     </ul>
                     <button id="verify-s3d4" class="check-btn">Verificar</button>
                 </div>
