--- a/semanas/semana4.html
+++ b/semanas/semana4.html
@@ -28,20 +28,21 @@
                         <h4 style="margin-bottom: 0.5rem;">Dossiê do Agente Phillip:</h4>
                         <p style="font-style: italic; color: var(--c-text);">
                             "Hello! My name is Phillip. I live in the U.S.A., and I speak English. I study in the morning. I study history and math, but I don't like science. In the evenings, I read online comic books and I write messages to my friends. I have many friends, but they don't like comic books."
+                            <button class="audio-btn" data-audio-src="../assets/audio/semana4_dossie_phillip.mp3" style="margin-left: 0.5rem;">🔊</button>
                         </p>
                     </div>
 
                     <p class="prompt">Responda às perguntas sobre o texto:</p>
                     <ul class="transform-activity">
-                        <li><p class="prompt">1. Where does Phillip live?</p>
+                        <li><p class="prompt">1. Where does Phillip live? (Onde o Phillip mora?)</p>
                             <input type="text" id="s4d1q1" data-answer="he lives in the u.s.a." class="input-full"><div class="feedback-message" id="s4d1-feedback1"></div></li>
-                        <li><p class="prompt">2. What does he study in the morning?</p>
+                        <li><p class="prompt">2. What does he study in the morning? (O que ele estuda de manhã?)</p>
                             <input type="text" id="s4d1q2" data-answer="he studies history and math" class="input-full"><div class="feedback-message" id="s4d1-feedback2"></div></li>
-                        <li><p class="prompt">3. Does he like science?</p>
+                        <li><p class="prompt">3. Does he like science? (Ele gosta de ciências?)</p>
                             <input type="text" id="s4d1q3" data-answer="no, he doesn't" class="input-full"><div class="feedback-message" id="s4d1-feedback3"></div></li>
-                        <li><p class="prompt">4. What does he do in the evenings?</p>
+                        <li><p class="prompt">4. What does he do in the evenings? (O que ele faz à noite?)</p>
                             <input type="text" id="s4d1q4" data-answer="he reads online comic books and writes messages" class="input-full"><div class="feedback-message" id="s4d1-feedback4"></div></li>
-                        <li><p class="prompt">5. Do his friends like comic books?</p>
+                        <li><p class="prompt">5. Do his friends like comic books? (Os amigos dele gostam de quadrinhos?)</p>
                             <input type="text" id="s4d1q5" data-answer="no, they don't" class="input-full"><div class="feedback-message" id="s4d1-feedback5"></div></li>
                     </ul>
                     <button id="verify-s4d1" class="check-btn">Verificar</button>
@@ -50,41 +51,49 @@
 
             <!-- TREINO 2: LIKE TO + VERBO -->
             <section class="mission-day">
-                <h2>Treino 2: Código "Like To"</h2>
-                <div class="activity-box">
-                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">A estrutura <span class="en-word">like to + AÇÃO</span> é super comum! Significa "gostar de fazer algo".</p>
-                    <p class="prompt">Missão: Traduza as frases usando o código "like to".</p>
-                    <ul class="transform-activity">
-                        <li><p class="prompt">1. Eles gostam de ler quadrinhos.</p>
-                             <input type="text" id="s4d2q1" data-answer="they like to read comic books" class="input-full"><div class="feedback-message" id="s4d2-feedback1"></div></li>
-                        <li><p class="prompt">2. Eles gostam de escrever histórias curtas?</p>
-                            <input type="text" id="s4d2q2" data-answer="do they like to write short stories?" class="input-full"><div class="feedback-message" id="s4d2-feedback2"></div></li>
-                        <li><p class="prompt">3. Eu gosto de escrever para meus amigos.</p>
-                            <input type="text" id="s4d2q3" data-answer="i like to write to my friends" class="input-full"><div class="feedback-message" id="s4d2-feedback3"></div></li>
-                        <li><p class="prompt">4. Nós não gostamos de ler mensagens longas.</p>
-                            <input type="text" id="s4d2q4" data-answer="we don't like to read long messages" class="input-full"><div class="feedback-message" id="s4d2-feedback4"></div></li>
-                        <li><p class="prompt">5. Você gosta de ler livros online?</p>
-                            <input type="text" id="s4d2q5" data-answer="do you like to read online books?" class="input-full"><div class="feedback-message" id="s4d2-feedback5"></div></li>
-                    </ul>
-                     <button id="verify-s4d2" class="check-btn">Verificar</button>
-                </div>
-            </section>
+    <h2>Treino 2: Código "Like To"</h2>
+    <div class="activity-box">
+        <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">
+            <strong>Aprenda:</strong>
+            <button class="audio-btn" data-audio-src="../assets/audio/semana4_like_to.mp3" style="margin-left: 0.5rem;">🔊</button><br>
+            Em inglês, usamos <span class="en-word">like to</span> seguido de um verbo para dizer que gostamos de fazer alguma coisa. Por exemplo, "I like to read" significa "Eu gosto de ler".<br>
+            <span class="en-word">Like to</span> funciona para todas as pessoas: I like to..., you like to..., we like to..., they like to...<br>
+            Para perguntas, usamos: <span class="en-word">Do you like to...?</span> ou <span class="en-word">Do they like to...?</span><br>
+            <strong>Missão:</strong> Traduza as frases usando o código "like to".
+        </p>
+        <ul class="transform-activity">
+            <li><p class="prompt">1. Eles gostam de ler quadrinhos.</p>
+                 <input type="text" id="s4d2q1" data-answer="they like to read comic books" class="input-full"><div class="feedback-message" id="s4d2-feedback1"></div></li>
+            <li><p class="prompt">2. Eles gostam de escrever histórias curtas?</p>
+                <input type="text" id="s4d2q2" data-answer="do they like to write short stories?" class="input-full"><div class="feedback-message" id="s4d2-feedback2"></div></li>
+            <li><p class="prompt">3. Eu gosto de escrever para meus amigos.</p>
+                <input type="text" id="s4d2q3" data-answer="i like to write to my friends" class="input-full"><div class="feedback-message" id="s4d2-feedback3"></div></li>
+            <li><p class="prompt">4. Nós não gostamos de ler mensagens longas.</p>
+                <input type="text" id="s4d2q4" data-answer="we don't like to read long messages" class="input-full"><div class="feedback-message" id="s4d2-feedback4"></div></li>
+            <li><p class="prompt">5. Você gosta de ler livros online?</p>
+                <input type="text" id="s4d2q5" data-answer="do you like to read online books?" class="input-full"><div class="feedback-message" id="s4d2-feedback5"></div></li>
+        </ul>
+         <button id="verify-s4d2" class="check-btn">Verificar</button>
+    </div>
+</section>
 
             <!-- TREINO 3: REVISÃO GERAL DE ESCRITA -->
             <section class="mission-day">
                 <h2>Treino 3: Desafio do Construtor</h2>
                 <div class="activity-box">
-                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">Vamos revisar! Monte as frases completas com os ingredientes dados.</p>
+                    <p class="prompt" style="font-size: 1.1rem; line-height: 1.7;">
+                        Monte a frase completa em inglês usando as palavras embaralhadas de cada linha abaixo. Escreva a frase na ordem correta!
+                    </p>
                     <ul class="transform-activity">
-                        <li><p class="prompt">1. I / want / the / sneakers / (blue)</p>
+                        <li><p class="prompt">1. sneakers / blue / want / the / I</p>
                             <input type="text" id="s4d3q1" data-answer="i want the blue sneakers" class="input-full"><div class="feedback-message" id="s3d3-feedback1"></div></li>
-                        <li><p class="prompt">2. Do you / study / history / at school?</p>
+                        <li><p class="prompt">2. at school / do you / history / study / ?</p>
                             <input type="text" id="s4d3q2" data-answer="do you study history at school?" class="input-full"><div class="feedback-message" id="s3d3-feedback2"></div></li>
-                        <li><p class="prompt">3. We / have to / read / the posts</p>
+                        <li><p class="prompt">3. have to / we / the posts / read</p>
                             <input type="text" id="s4d3q3" data-answer="we have to read the posts" class="input-full"><div class="feedback-message" id="s3d3-feedback3"></div></li>
-                        <li><p class="prompt">4. Where / do they / live?</p>
+                        <li><p class="prompt">4. do they / where / live / ?</p>
                             <input type="text" id="s4d3q4" data-answer="where do they live?" class="input-full"><div class="feedback-message" id="s3d3-feedback4"></div></li>
-                        <li><p class="prompt">5. I like / to write messages / to / my friends</p>
+                        <li><p class="prompt">5. to write messages / my friends / i like / to</p>
                             <input type="text" id="s4d3q5" data-answer="i like to write messages to my friends" class="input-full"><div class="feedback-message" id="s3d3-feedback5"></div></li>
                     </ul>
                     <button id="verify-s4d3" class="check-btn">Verificar</button>
